// Copyright 2020 Anapaya Systems
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/scionproto/scion/go/pkg/proto/control_plane";

package proto.control_plane.v1;

import "proto/drkey/mgmt/v1/mgmt.proto";

service DRKeyLvl1Service{
    // Return the Lvl1Key that matches the request
    rpc DRKeyLvl1(proto.drkey.mgmt.v1.DRKeyLvl1Request) returns (proto.drkey.mgmt.v1.DRKeyLvl1Response) {}
}

service DRKeyLvl2Service{
    // Return the Lvl2Key that matches the request
    rpc DRKeyLvl2(DRKeyLvl2Request) returns (DRKeyLvl2Response) {}
}

message DRKeyLvl2Request{
    // BaseReq contains the basic information for the Lvl2 request
    proto.drkey.mgmt.v1.DRKeyLvl2Request base_req = 1;
}

message DRKeyLvl2Response{
    // BaseRep contains the basic information for the Lvl2 response
    proto.drkey.mgmt.v1.DRKeyLvl2Response base_rep = 1;
}
